@@ -1,3 +1,9 @@
+[v8r8p12]
+use DIRAC v6r17p26
+
+* added jobType HistoMerge
+* remove the skeleton file and modify the script accordenly
+
 [v8r8p11]
 use DIRAC v6r17p25
 
